{
    "name": "NewInput",
    "maps": [
        {
            "name": "peasent",
            "id": "19f0abb6-115c-4344-a826-5b0f9d476e4b",
            "actions": [
                {
                    "name": "Moving",
                    "type": "Value",
                    "id": "7616f851-8058-4f4a-9153-8ac83dd451f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dashing",
                    "type": "Value",
                    "id": "e56b7c1f-5218-4e11-858c-fb58fc38ec71",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6b26c7a9-488b-4995-91ce-e4543608ed1a",
                    "path": "<SwitchProControllerHID>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "743c5984-7340-4b66-8556-ce9cb1a6c758",
                    "path": "<SwitchProControllerHID>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dashing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "906af138-fe7b-4bfa-8be7-e7f4e3b724a1",
                    "path": "<SwitchProControllerHID>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dashing",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "peasent2",
            "id": "28c7d64a-24ea-436a-8554-74ce52b2a0c7",
            "actions": [
                {
                    "name": "Moving",
                    "type": "Value",
                    "id": "56d14c37-c878-46e8-86c5-2d2d0ba7aa3e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ec6ab2d-397b-45b0-8406-779b3c04a0a2",
                    "path": "<DualSenseGamepadHID>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Werewolf",
            "id": "716815c8-3d6c-4c54-a338-19ff9f4a29d1",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "33e5d134-aab0-44aa-a810-667dff45e8e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6fd68e6-9055-4a05-9ead-c7015389f1d0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}